# sequans-rs

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yaml
.helix/: languages.toml
monarch2/: Cargo.toml  README.md
monarch2/src/: error.rs  fmt.rs  lib.rs  modem.rs
monarch2/src/command/: mod.rs  types.rs
monarch2/src/command/coap/: mod.rs  urc.rs
monarch2/src/command/device/: mod.rs  responses.rs  types.rs  urc.rs
monarch2/src/command/gnss/: mod.rs  responses.rs  types.rs  urc.rs
monarch2/src/command/manufacturing/: mod.rs  types.rs
monarch2/src/command/mobile_equipment/: mod.rs  responses.rs  types.rs
monarch2/src/command/mqtt/: mod.rs  responses.rs  types.rs  urc.rs
monarch2/src/command/network/: mod.rs  types.rs  urc.rs
monarch2/src/command/nvm/: mod.rs  types.rs
monarch2/src/command/pdp/: mod.rs  types.rs
monarch2/src/command/sim/: mod.rs  types.rs
monarch2/src/command/ssl_tls/: mod.rs  responses.rs  types.rs
monarch2/src/command/system_features/: mod.rs  types.rs
