[workspace]
members = ["monarch2"]
resolver = "2"

[workspace.package]
authors = ["Matous Dzivjak <matousdzivjak@gmail.com>"]
categories = ["embedded", "no-std"]
edition = "2024"
keywords = ["sequans", "monarch2", "embedded-hal-driver"]
license = "Apache-2.0"
repository = "https://github.com/sevents-os/sequans-rs"
